# idris-elixir

./: .gitignore  idris-elixir.cabal  run_tests.sh  stack.yaml
src/: Main.hs
src/IRTS/: CodegenElixir.hs
test/: test.sh
